2000-04-29  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* init-main.c (diskfs_init_main): Dereference BOOTSTRAP before
	checking for MACH_PORT_NULL.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* file-exec.c (diskfs_S_file_exec): Fix typo and braino in last change.
	* init-startup.c (diskfs_startup_diskfs): Fix braino in last change.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot-start.c (diskfs_S_fsys_init, diskfs_start_bootstrap): Don't
	use MOVE_SEND in Hurd RPC.

	* file-exec.c (diskfs_S_file_exec): Don't use MAKE_SEND in Hurd
	RPC.
	* init-startup.c (diskfs_startup_diskfs, _diskfs_init_completed):
	Likewise.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Use ports_get_send_right.

	* io-reauthenticate.c (diskfs_S_io_reauthenticate): Use
	ports_get_send_right.

	* boot-start.c (diskfs_start_bootstrap): Use ports_get_send_right.
	(diskfs_execboot_fsys_startup): Use ports_get_send_right.
	(diskfs_S_fsys_init): Use ports_get_send_right.
	(start_execserver): Use ports_get_send_right.

2000-02-27  Roland McGrath  <roland@baalperazim.frob.com>

	* file-exec.c (diskfs_S_file_exec): Give the new peropen for the exec
	server O_EXEC permission as well as O_READ.

2000-01-25  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Follow symlink despite flags if
	MUSTBEDIR is set (i.e. there was a trailing slash).

2000-01-24  Roland McGrath  <roland@baalperazim.frob.com>

	* rdwr-internal.c (_diskfs_rdwr_internal): Short-circuit return for
	zero-length transfer to avoid side effects, as POSIX requires.

1999-12-13  Roland McGrath  <roland@baalperazim.frob.com>

	Rewrite of a fix provided by Bill White <bill.white@griggsinst.com>:
	* fhandle.h (union diskfs_fhandle): Replaces struct diskfs_fhandle.
	Use a union element of char[28] to ensure size requirement.
	* fsys-getfile.c (diskfs_S_fsys_getfile): Update uses for new type.