@@ -1,3 +1,14 @@
+2000-05-14  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>
+
+	* priv.h (DEFAULT_SYNC_INTERVAL): New macro.
+	(DEFAULT_SYNC_INTERVAL_STRING): Likewise.
+	(STRINGIFY): Likewise.
+	(STRINGIFY_1): Likewise.
+	* opts-common.h (diskfs_common_options): Use
+	DEFAULT_SYNC_INTERVAL_STRING instead hardcoded value.
+	* sync-default.h: Include "priv.h". Use DEFAULT_SYNC_INTERVAL
+	instead hardcoded value.
+
 2000-04-29  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>
 
 	* init-main.c (diskfs_init_main): Dereference BOOTSTRAP before
